[package]
name = "health-sync"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
minhook = "0.5.0"
core = { version = "1.0", package = "rustc-std-workspace-core" }

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]

[lib]
name = "plugin"
crate-type = ["cdylib"]
